# DES_Instrument-Cluster

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.save  Main.qml  README.md  main.cpp
3D Prints/7inch HDMI LCD/print.me!/: bottom(old).stl  top(old).stl
3D Prints/7inch HDMI LCD/ywabiko/: HDMI7_Bottom_v96.stl
Arduino Code/LM363_BasicSketch/: LM363_BasicSketch.ino
Arduino Code/SpeedSensor_CAN/: SpeedSensor_CAN.ino
Arduino/SpeedSensor_CAN/: SpeedSensor_CAN.ino
Cluster-app/: CMakeLists.txt  InstrumentCluster.qml  LeftCluster.qml  Main.qml  RightCluster.qml  rpi-toolchain.cmake
Cluster-app/design/: Gear.qml  InstrumentCluster.qml  LeftCluster.qml  Main.qml  RightCluster.qml  qml.qrc
Cluster-app/src/: BatteryMonitor.cpp  BatteryMonitor.h  BatteryProvider.cpp  BatteryProvider.h  BatterySoc.cpp  BatterySoc.h  CANGateway.cpp  CANGateway.h  CANReceiver.cpp  CANReceiver.h  INA219.cpp  INA219.h  InstrumentCluster.cpp  InstrumentCluster.h  SpeedProvider.cpp  SpeedProvider.h  ViewModel.cpp  ViewModel.h  error.h  main.cpp
Cluster-app/src/jjo/: BatteryProvider.h  SpeedProvider.h
Cluster-app/src/module/: BatteryMonitor.cpp  BatteryMonitor.h  BatterySoc.cpp  CanGateway.cpp  CanGateway.h  SharedMemory.cpp  SharedMemory.h
Controller/: gamepads.py
Documentation/: Architecture.drawio  CodeFlow.drawio  DES_Instrument_Cluster_Presentation.pptx
InstrumentClusterAnalog/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  rpmgauge.cpp  rpmgauge.h  speedometer.cpp  speedometer.h
Pi-controller/: controller.py
Service/: instrument-cluster.service
SocketClient/: CMakeLists.txt
batteryCapacity/: BatterySOC.cpp  BatterySOC.h  INA219.h  Makefile  ina219.cpp  main  main.cpp  soc_example.cpp
build-tool/: Dockerfile  Dockerfile.x86  Makefile  Makefile.x86  toolchain-aarch64.cmake
can_handler_server/: can_handler_server.py  ensure_can_interface.py
jjo/: .qmlls.ini  CMakeLists.txt  InstrumentCluster.qml  LeftCluster.qml  qml.qrc
jjo/src/: cangatewayclient.cpp  cangatewayclient.h  main.cpp  speedprovider.cpp  speedprovider.h
peter/: CMakeLists.txt  Main.qml
peter/src/: CANReceiver.cpp  main.cpp  speedprovider.cpp  speedprovider.h
systemd/: can-interface.service  piracer-controller.service
